# rust_rest_api

./: .gitignore  Cargo.toml  LICENSE  ReadMe.md
.github/workflows/: release.yaml
migration/src/: m20220101_000001_create_table.rs
src/: config.rs  db.rs  main.rs  middleware.rs  state.rs  urls.rs
src/posts/: mod.rs  models.rs  routers.rs  services.rs
