[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
# chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }

[dependencies.sea-orm]
version = "1.1.11"
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "sqlx-mysql",
    "sqlx-sqlite",
]
